# crypto

./: .gitmodules  Cargo.toml  README.md
src/: derivation.rs  lib.rs  random.rs
src/encryption/: cbc.rs
