[package]
name = "buttercup-crypto"
version = "0.1.0"
authors = ["Sallar Kaboli <sallar.kaboli@gmail.com>", "Perry Mitchell <perry@perrymitchell.net>"]
description = "Buttercup's native encryption tools"
license = "MIT"
repository = "https://github.com/buttercup/crypto"

[dependencies]
rust-crypto-wasm = "^0.3"
