[package]
name = "buttercup-crypto"
version = "0.2.0"
authors = ["Sallar Kaboli <sallar.kaboli@gmail.com>", "Perry Mitchell <perry@perrymitchell.net>"]
description = "Native encryption tools for Buttercup products"
license = "MIT"
repository = "https://github.com/buttercup/crypto"

[dependencies]
rust-crypto-wasm = "^0.3"
rand = "0.5.1"
base64 = "^0.5"
hex = "^0.3"
